# order-insight

./: .gitignore  README.md  pyproject.toml
data/: sample_orders.json
docs/: ARCHITECTURE.md  sample_output.txt
src/order_insight/: __init__.py  analytics.py  constants.py  input_handler.py  logging_config.py  main.py  models.py  reporting.py  repository.py
tests/: test_order_insight.py
